new version of todo

--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js" defer></script>
-    <title>Todo List</title>
+    <title>TodoList</title>
   </head>
   <body>
-    <div>
-      <input type="text" placeholder="What to do" />
-      <button id="add-btn">Add</button>
-    </div>
-
-    <div><ul></ul></div>
+    <section class="todolist fixed-center">
+      <header class="todolist__header"></header>
+      <ul class="todolist__content"></ul>
+    </section>
+    <script src="main.js"></script>
   </body>
 </html>
